--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
   flutter_lints: ^2.0.0
   provider: ^6.0.2
 
-  bubble_bottom_bar: ^2.0.0
+  #bubble_bottom_bar: ^2.0.0
+  bottom_nav_bar: ^1.0.3
 
 
 
