--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,19 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_lints: ^2.0.0
+
+
   provider: ^6.0.2
-
-  #bubble_bottom_bar: ^2.0.0
+  hive: ^2.0.5
+  hive_flutter: ^1.0.0
   bottom_nav_bar: ^1.0.3
-
-
-
+  lottie: ^1.4.2
+  #analyzer: 0.39.14
 
 dev_dependencies:
-  build_runner: ^2.0.6
+  build_runner: ^2.0.4
+  hive_generator: ^1.1.0
+  analyzer: ^4.7.0
   flutter_test:
     sdk: flutter
 
@@ -29,9 +32,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets/images/logo.jpg
-  #   - assets/images/atidstu_logo.gif
+  assets:
+    - assets/imgs/food.png
+    - assets/imgs/food2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
