--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/imgs/food.png
+    - assets/imgs/food1.png
     - assets/imgs/food2.png
+    - assets/imgs/food3.png
+    - assets/imgs/food4.png
+    - assets/imgs/food5.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
