--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_lints: ^2.0.0
-
-
+  flutter_slidable: ^2.0.0
   provider: ^6.0.2
   hive: ^2.0.5
   hive_flutter: ^1.0.0
