--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   hive_flutter: ^1.0.0
   bottom_nav_bar: ^1.0.3
   lottie: ^1.4.2
+  flutter_staggered_grid_view: ^0.6.2
   #analyzer: 0.39.14
 
 dev_dependencies:
