--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,15 +49,14 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
+  # example:Pacifico-Regular.ttf
   fonts:
-    - family: JetBrainsMono
-      fonts:
-        - asset: assets/fonts/JetBrainsMono-Bold.ttf
-        - asset: assets/fonts/JetBrainsMono-Medium.ttf
-        - asset: assets/fonts/JetBrainsMonoNL-Medium.ttf
     - family: FiraCode
       fonts:
         - asset: assets/fonts/FiraCode-Medium.ttf
+    - family: Plankiss
+      fonts:
+        - asset: assets/fonts/Plankiss.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
