--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   bottom_nav_bar: ^1.0.3
   lottie: ^1.4.2
   flutter_staggered_grid_view: ^0.6.2
+  dots_indicator: ^2.1.0
+  get: ^4.1.4
+
   #analyzer: 0.39.14
 
 dev_dependencies:
@@ -54,9 +57,7 @@ flutter:
     - family: FiraCode
       fonts:
         - asset: assets/fonts/FiraCode-Medium.ttf
-    - family: Plankiss
-      fonts:
-        - asset: assets/fonts/Plankiss.ttf
+
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
