--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   dots_indicator: ^2.1.0
   get: ^4.1.4
+  splash_screen_view: ^3.0.0
 
   #analyzer: 0.39.14
 
@@ -36,11 +37,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/imgs/food1.png
-    - assets/imgs/food2.png
-    - assets/imgs/food3.png
-    - assets/imgs/food4.png
-    - assets/imgs/food5.png
+    - assets/imgs/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -57,6 +55,16 @@ flutter:
     - family: FiraCode
       fonts:
         - asset: assets/fonts/FiraCode-Medium.ttf
+    - family: OleoScript
+      fonts:
+        - asset: assets/fonts/OleoScript-Regular.ttf
+        - asset: assets/fonts/OleoScript-Bold.ttf
+    - family: Insaniburger
+      fonts:
+        - asset: assets/fonts/Insaniburger.ttf
+        - asset: assets/fonts/InsaniburgerWithCheese-47Dp.ttf
+
+
 
 
   # For details regarding fonts from package dependencies,
