--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   get: ^4.1.4
   splash_screen_view: ^3.0.0
 
+  material_design_icons_flutter: ^5.0.6996
   #analyzer: 0.39.14
 
 dev_dependencies:
@@ -34,23 +35,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/imgs/
+    - assets/icons/
 
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:Pacifico-Regular.ttf
   fonts:
     - family: Scripto
       fonts:
