--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.text">
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
    <application
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
+
         android:label="text"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -20,6 +25,16 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+                 <!--  -->
+            <meta-data
+              android:name="com.google.android.gms.version"
+              android:value="@integer/google_play_services_version"
+              />
+                 <!--  -->
+            <meta-data
+              android:name="com.google.android.gms.vision.DEPENDENCIES"
+              android:value="barcode" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -31,4 +46,5 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+       <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
