--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,22 +12,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_lints: ^2.0.0
   flutter_slidable: ^2.0.0
-
   provider: ^6.0.2
-
   hive: ^2.0.5
   hive_flutter: ^1.0.0
-
   bottom_nav_bar: ^1.0.3
   flutter_staggered_grid_view: ^0.6.2
   dots_indicator: ^2.1.0
   get: ^4.1.4
   splash_screen_view: ^3.0.0
-
   cloud_firestore: ^4.0.2
-
-
   material_design_icons_flutter: ^5.0.6996
+  firebase_auth: ^4.0.2
+
   #analyzer: 0.39.14
 
 dev_dependencies:
