--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,26 +10,26 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_lints: ^2.0.0
-  flutter_slidable: ^2.0.0
-  provider: ^6.0.2
+  flutter_slidable: ^2.0.0  # слайд для корзины
+  bottom_nav_bar: ^1.0.3    # нижняя меню
+  dots_indicator: ^2.1.0    # точки-интикаторы страницы
+  flutter_staggered_grid_view: ^0.6.2  # фавориты не ромная сетка
+  material_design_icons_flutter: ^5.0.6996 # 4 хромые иконки
+
   hive: ^2.0.5
   hive_flutter: ^1.0.0
-  bottom_nav_bar: ^1.0.3
-  flutter_staggered_grid_view: ^0.6.2
-  dots_indicator: ^2.1.0
-  get: ^4.1.4
-  splash_screen_view: ^3.0.0
-  cloud_firestore: ^4.0.2
-  material_design_icons_flutter: ^5.0.6996
-  firebase_auth: ^4.0.2
 
-  #analyzer: 0.39.14
+  provider: ^6.0.2
+  get: ^4.1.4
+
+  cloud_firestore: ^4.0.2
+  firebase_auth: ^4.0.2
 
 dev_dependencies:
   build_runner: ^2.0.4
   hive_generator: ^1.1.0
   analyzer: ^4.7.0
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
