--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_slidable: ^2.0.0  # слайд для корзины
   dots_indicator: ^2.1.0    # точки-интикаторы страницы
   flutter_staggered_grid_view: ^0.6.2  # фавориты не ромная сетка
-
+  lottie: ^2.0.0
 
 
   hive: ^2.0.5
