--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+
   flutter_slidable: ^2.0.0  # слайд для корзины
   dots_indicator: ^2.1.0    # точки-интикаторы страницы
-
 
   hive: ^2.0.5
   hive_flutter: ^1.0.0
 
-  provider: ^6.0.2
   get: ^4.1.4
-  get_it: ^7.2.0
 
-  cloud_firestore: ^4.0.2
+  # регистрация
   firebase_auth: ^4.0.2
 
 dev_dependencies:
