--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,19 +14,14 @@ dependencies:
   flutter_slidable: ^2.0.0  # слайд для корзины
   dots_indicator: ^2.1.0    # точки-интикаторы страницы
 
-  hive: ^2.0.5
-  hive_flutter: ^1.0.0
-
   get: ^4.1.4
-
+  shared_preferences: ^2.0.15
   # регистрация
   firebase_auth: ^4.0.2
 
 dev_dependencies:
-  build_runner: ^2.0.4
-  hive_generator: ^1.1.0
   analyzer: ^4.7.0
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 
