--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/imgs/logo.jpg
+
+
+
 
 flutter:
   uses-material-design: true
