--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,28 +14,31 @@ dependencies:
   flutter_slidable: ^2.0.0     # слайд для корзины
   dots_indicator: ^2.1.0       # точки-интикаторы страницы
   shared_preferences: ^2.0.15  # локальное хранилище
-  firebase_auth: ^4.0.2        # регистрация
+
+  # firebase
+  firebase_database:
+  firebase_auth: ^4.2.4        # регистрация
+  firebase_core: ^2.4.1
 
   pull_to_refresh: ^2.0.0          # обновление при скроле
 
   get: ^4.6.5                   # поставщик
   intl: ^0.17.0                 # норм время
+  http: ^0.13.3
 
 
 dev_dependencies:
-  analyzer: ^4.7.0
+  analyzer: ^5.2.0
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.11.0
 
 flutter_icons:
   android: true
   ios: true
   image_path: assets/imgs/logo.jpg
-
-
 
 
 flutter:
