--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dependencies:
   get: ^4.6.5                  # поставщик
   intl: ^0.17.0                # норм время
 
+
+  lottie: ^2.1.0
+  rive: ^0.9.0
+
+
+
 dev_dependencies:
   analyzer: ^5.2.0
   flutter_lints: ^2.0.1
@@ -44,6 +50,7 @@ flutter:
   assets:
     - assets/imgs/
     - assets/icons/
+    - assets/ani/
 
   fonts:
     - family: Insaniburger
