--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^2.0.15  # локальное хранилище
 
   # firebase
+  cloud_firestore: ^4.3.1
   firebase_auth: ^4.2.4        # регистрация
   firebase_core: ^2.4.1
 
