--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   intl: ^0.17.0                # норм время
 
   lottie: ^2.1.0
-  google_maps_flutter: ^2.2.3
+  fluent_ui: ^4.3.0
+  firedart: ^0.9.0+1
+
 
 
 
