--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   get: ^4.6.5                  # поставщик
   intl: ^0.17.0                # норм время
 
+  animations: ^2.0.7
   lottie: ^2.1.0
-  google_maps_flutter: ^2.2.3
 
 
 
